# monty-python

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_THIRD_PARTY  README.md  alembic.ini  autodoc.py  docker-compose.yaml  entrypoint.sh  mkdocs.yaml  noxfile.py  pyproject.toml  requirements.txt  tox.ini
.basedpyright/: baseline.json
.github/: FUNDING.yml  dependabot.yaml
.github/actions/setup-env/: action.yaml
.github/workflows/: CI.yaml  build.yaml  ci.yaml  deploy.yaml  lint_test.yaml  lint_test_build.yaml  sentry_release.yaml  status_embed.yaml
bot/: __init__.py  __main__.py  bot.py  command.py  config.py  constants.py  converters.py  errors.py  log.py
bot/exts/: __init__.py  _conversationstarters.py  _pythonfacts.py  bookmark.py  cheatsheet.py  emoji.py  error_handler.py  githubinfo.py  help.py  issues.py  meta.py  ping.py  pythonfacts.py  realpython.py  source.py  stackoverflow.py  status_codes.py  timed.py  wikipedia.py  wolfram.py  xkcd.py
bot/exts/backend/: error_handler.py  logging.py
bot/exts/eval/: __init__.py
bot/exts/filters/: token_remover.py  webhook_remover.py
bot/exts/info/: charinfo.py  codesnippets.py  colour.py  github_info.py  pep.py  pypi.py  utils.py
bot/exts/info/codeblock/: _cog.py  _instructions.py  _parsing.py
bot/exts/info/docs/: __init__.py  _batch_parser.py  _cog.py  _html.py  _inventory_parser.py  _markdown.py  _parsing.py
bot/exts/python/: _run_py.py  run_py.py
bot/exts/utils/: admin.py  bookmark.py  extensions.py
bot/resources/evergreen/: py_topics.yaml
bot/utils/: __init__.py  checks.py  converters.py  decorators.py  delete.py  extensions.py  function.py  helpers.py  lock.py  messages.py  pagination.py  scheduling.py  services.py
docs/: .readthedocs.yaml  future-plans.md  privacy.md  terms.md
docs/assets/css/: extra_admonitions.css
docs/commands/: app-commands.md  prefix-commands.md
docs/contributing/: design.md  developer-commands.md  getting-started.md
docs/contributing/design/: config.md
monty/: __init__.py  __main__.py  aiohttp_session.py  bot.py  command.py  config.py  config_metadata.py  config_schema.toml  constants.py  converters.py  errors.py  events.py  github_client.py  group.py  log.py  metadata.py  migrations.py  monkey_patches.py  statsd.py
monty/alembic/: env.py
monty/alembic/versions/: 19e4f2aee642_guild_features.py  2022_06_28_feature_rollouts.py  2023_03_17_1_allow_disabling_codesnippets.py  2023_06_08_1_add_github_comment_linking.py  50ddfc74e23c_add_per_guild_configuration.py  6a57a6d8d400_.py  7d2f79cf061c_add_per_guild_issue_linking_config.py  d1f327f1548f_.py
monty/components/: app_emoji_syncing.py
monty/config/: __init__.py  _validate_metadata.py  components.py  metadata.py  models.py  validators.py
monty/configuration/: __init__.py  schema.py
monty/database/: __init__.py  base.py  entity_features.py  feature.py  guild.py  guild_config.py  metadata.py  package.py  rollouts.py
monty/database/models/: __init__.py  feature.py  guild_config.py  package.py  rollouts.py
monty/exts/: __init__.py  _conversationstarters.py  dev_tools.py  help.py  meta.py  timed.py  wikipedia.py  wolfram.py
monty/exts/_disabled/: _pythonfacts.py  cheatsheet.py
monty/exts/api/: realpython.py  stackoverflow.py  wikipedia.py  wolfram.py
monty/exts/backend/: admin.py  bot_features.py  config.py  error_handler.py  extensions.py  global_checks.py  guild_config.py  help.py  logging.py  rollouts.py  uptime.py
monty/exts/core/: admin.py  bot_features.py  delete.py  error_handler.py  eval.py  events.py  extensions.py  gateway.py  global_checks.py  internal.py  logging.py  rollouts.py  uptime.py  uptime_ping.py
monty/exts/disnake/: __init__.py
monty/exts/eval/: __init__.py
monty/exts/filters/: token_remover.py  webhook_remover.py
monty/exts/filters/codeblock/: __init__.py  _cog.py  _instructions.py  _parsing.py
monty/exts/info/: _global_source_snekcode.py  codeblock_buttons.py  codeblock_commands.py  codesnippets.py  colour.py  discord.py  emoji.py  github_info.py  global_source.py  meta.py  pep.py  pypi.py  python_discourse.py  ruff.py  source.py  stackoverflow.py  utils.py  xkcd.py
monty/exts/info/codeblock/: __init__.py  _cog.py  _instructions.py  _parsing.py
monty/exts/info/docs/: __init__.py  _batch_parser.py  _cog.py  _html.py  _inventory_parser.py  _markdown.py  _parsing.py  _redis_cache.py
monty/exts/info/github/: __init__.py  _handlers.py  client.py  cog.py  graphql_models.py  linker.py  models.py
monty/exts/info/github/entities/: cache.py  discussions.py  fmt.py  integration.py  resolution.py
monty/exts/meta/: guild_config.py  help.py  meta.py  source.py  timed.py
monty/exts/python/: _global_source_snekcode.py  _run_py.py  codeblock_commands.py  eval.py  global_source.py  pep.py  pypi.py  python_discourse.py  realpython.py  ruff.py  wikipedia.py
monty/exts/utils/: admin.py  bookmark.py  colour.py  delete.py  dev_tools.py  extensions.py  misc.py  status_codes.py  timed.py  xkcd.py
monty/resources/: __init__.py  repo_aliases.json  ruff_rules.json
monty/resources/evergreen/: caesar_info.json  html_colours.json  xkcd_colours.json
monty/utils/: __init__.py  caching.py  checks.py  code.py  converters.py  decorators.py  delete.py  exceptions.py  extensions.py  features.py  function.py  helpers.py  html_parsing.py  inventory_parser.py  lock.py  markdown.py  messages.py  pagination.py  responses.py  rollouts.py  scheduling.py  services.py
scripts/: fetch_octicons.py
